# marina

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  org.maui.marina.desktop.in
src/: CMakeLists.txt  main.cpp  main.qml
src/controllers/: dockmodel.cpp  dockmodel.h
